<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.kalacheng.centercommon.R" />

        <!--        <import type="com.kalacheng.busooolive.model.OOOLiveRoomNoAnswerDto" />-->

        <variable
            name="ac"
            type="com.kalacheng.centercommon.activity.PowerSettingActivity" />

        <variable
            name="bean"
            type="com.kalacheng.libuser.model.InvisiblePrivilegeDTO" />

        <variable
            name="vipbean"
            type="com.kalacheng.libuser.model.VipPrivilegeDto" />

        <variable
            name="callbackContribute"
            type="com.kalacheng.util.listener.OnBeanCallback" />

        <variable
            name="callbackLive"
            type="com.kalacheng.util.listener.OnBeanCallback" />

        <variable
            name="callbackRecharge"
            type="com.kalacheng.util.listener.OnBeanCallback" />

        <variable
            name="callbackAllBroadcast"
            type="com.kalacheng.util.listener.OnBeanCallback" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/view_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F6F6F6"
            android:gravity="center|left"
            android:paddingLeft="14dp"
            android:paddingTop="4dp"
            android:text="@string/mine_power_setting_text"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/mine_power_setting_contribute"
                android:textColor="@color/textcolor_444444"
                android:textSize="14dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="@mipmap/icon_iwant_shop_no"
                android:clickable="true"
                android:onClick="@{()->callbackContribute.onClick(bean.devoteShow==0? 1 : 0)}"
                bind:image="@{bean.devoteShow==0?R.mipmap.icon_iwant_shop_no:R.mipmap.icon_iwant_shop}" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_default_line" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/mine_power_setting_live"
                android:textColor="@color/textcolor_444444"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="@mipmap/icon_iwant_shop_no"
                android:clickable="true"
                android:onClick="@{()->callbackLive.onClick(bean.joinRoomShow==0? 1 : 0)}"
                bind:image="@{bean.joinRoomShow==0?R.mipmap.icon_iwant_shop_no:R.mipmap.icon_iwant_shop}" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_default_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/mine_power_setting_recharge"
                android:textColor="@color/textcolor_444444"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="@mipmap/icon_iwant_shop_no"
                android:clickable="true"
                android:onClick="@{()->callbackRecharge.onClick(bean.chargeShow==0? 1 : 0)}"
                bind:image="@{bean.chargeShow==0?R.mipmap.icon_iwant_shop_no:R.mipmap.icon_iwant_shop}" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F6F6F6"
            android:gravity="center|left"
            android:paddingLeft="14dp"
            android:paddingTop="4dp"
            android:text="@string/mine_power_setting_all_broadcast_title"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/mine_power_setting_all_broadcast"
                android:textColor="@color/textcolor_444444"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="@mipmap/icon_iwant_shop_no"
                android:clickable="true"
                android:onClick="@{()->callbackAllBroadcast.onClick(vipbean.broadCast == -1 ? -1 : vipbean.broadCast==0? 1 : 0)}"
                bind:image="@{vipbean.broadCast==0 || vipbean.broadCast==-1?R.mipmap.icon_iwant_shop_no:R.mipmap.icon_iwant_shop}" />

        </LinearLayout>


    </LinearLayout>
</layout>