<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.kalacheng.centercommon.viewmodel.ApplyAnchorViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/view_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="请填写本人真实信息"
                    android:textColor="#ff999999"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="真实姓名"
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/reg_input_name"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />

            </LinearLayout>

            <include layout="@layout/layout_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="身份证号"
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:digits="0123456789Xx"
                    android:hint="@string/reg_input_id"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />

            </LinearLayout>

            <include layout="@layout/layout_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手机号码"
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/reg_input_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />

            </LinearLayout>

            <include layout="@layout/layout_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="QQ号       "
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_qq"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/reg_input_qq"
                    android:inputType="number|numberDecimal"
                    android:maxLength="14"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />

            </LinearLayout>

            <include layout="@layout/layout_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信号    "
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/reg_input_wechat"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />
            </LinearLayout>

            <include layout="@layout/layout_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="附加信息"
                    android:textColor="#ff444444"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_more"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/reg_input_more"
                    android:maxLength="50"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorB"
                    android:textSize="13sp" />
            </LinearLayout>

            <include layout="@layout/layout_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_above="@+id/tv_agreement"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/gradient_purple2"
            android:gravity="center"
            android:text="下一步"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="继续表示同意《直播协议》"
            android:textColor="#ffbbbbbb"
            android:textSize="12sp" />
    </RelativeLayout>
</layout>